simple-cluster/hello-world/helloworld_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: example2
  name: example2
  namespace: dev2    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: example2
  template:
    metadata:
      labels:
        app: example2
    spec:
      containers:
      - image: nginx:latest
        name: nginx
