simple-cluster/hello-world/hello-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example2
  labels:
    app: example2
  namespace: hello    
spec:
  type: ClusterIP
  selector:
    app: example2
  ports:
    - protocol: TCP
      targetPort: 80
      port: 80
